src/test/ui/async-await/issues/issue-67893.stderr
error: generator cannot be sent between threads safely
  --> $DIR/issue-67893.rs:9:7
   |
LL |     g(issue_67893::run())
   |       ^^^^^^^^^^^^^^^^^^ generator is not `Send`
   |
   = help: within `impl Future<Output = ()>`, the trait `Send` is not implemented for `MutexGuard<'_, ()>`
note: required by a bound in `g`
  --> $DIR/issue-67893.rs:6:14
   |
LL | fn g(_: impl Send) {}
   |              ^^^^ required by this bound in `g`

error: aborting due to previous error

